# lightdb

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  LICENSE  README.md  createTLF.sh  getFFMpegTimes.sh  index.html  packages.txt  stitch.sh  test.py
benchmarks/tiling/ffmpeg/: 4x4-1K-20s.sh  4x4-1K-40s.sh  4x4-2K-20s.sh  4x4-2K-60s.sh  4x4-4K-20s.sh  4x4-4K-40s.sh  4x4at4K.sh  CMakeLists.txt  benchmark_coaster.sh  benchmark_timelapse.sh  benchmark_venice.sh  box.h  createtilescripts.sh  darknet.h  image.h  stb_image_write.h  tile.cc
benchmarks/tiling/opencv/: CMakeLists.txt  main.cc  maincpu.cc  run.sh
core/: CMakeLists.txt
core/catalog/include/: Catalog.h  Files.h
core/catalog/src/: Catalog.cc  Files.cc
core/execution/include/: Coordinator.h  Environment.h  ExecutionContext.h
core/execution/src/: ExecutionContext.cc
core/functions/: extension.cc
core/functions/include/: Greyscale.h  extension.h
core/hevc/include/: AccessDelimiter.h  BitStream.h  Context.h  Emulation.h  Golombs.h  Headers.h  Nal.h  NalType.h  Opaque.h  PictureParameterSet.h  Profile.h  SequenceParameterSet.h  SliceSegmentLayer.h  StitchContext.h  Stitcher.h  VideoParameterSet.h
core/hevc/src/: AccessDelimiter.cc  BitStream.cc  Context.cc  Emulation.cc  Golombs.cc  Headers.cc  Nal.cc  Opaque.cc  PictureParameterSet.cc  Profile.cc  SequenceParameterSet.cc  SliceSegmentLayer.cc  Stitcher.cc  VideoParameterSet.cc  deleteme.cc
core/lightfield/include/: common.h
core/model/include/: Algebra.h  Color.h  Encoding.h  Functor.h  Geometry.h  Interpolation.h  LightField.h  Model.h  OldModel.h  Operators.h  Visitor.h
core/model/src/: Algebra.cc  Color.cc  Depthmap.cc  Functor.cc  Geometry.cc  Interpolation.cc  LightField.cc  Visitor.cc  blur.cu  blur.cubin  compile_blur.sh  compile_kernels.sh  kernels.cu  kernels.cubin
core/physical/include/: Adapters.h  Data.h  DecodeOperators.h  DiscretizeOperators.h  EncodeOperators.h  GPUOperators.h  HeuristicOptimizer.h  HomomorphicOperators.h  Homomorphisms.h  IdentityOperators.h  InterpolateOperators.h  MapOperators.h  MaterializedLightField.h  OldPhysicalOperators.h  Physical.h  PhysicalOperators.h  Plan.h  Rules.h  Runtime.h  SaveOperators.h  ScanOperators.h  SinkOperators.h  StoreOperators.h  SubqueryOperators.h  SubsetOperators.h  TransferOperators.h  UnionOperators.h
core/physical/src/: LightField.cc  Physical.cc  PhysicalOperators.cc  Runtime.cc  SubqueryOperators.cc
core/pipeline/include/: Execution.h
core/pipeline/src/: Execution.cc
core/planning/include/: Allocator.h  HeuristicOptimizer.h  Optimizer.h  Plan.h  Rules.h  VisitorTemp.h  VisitorTemp2.h
core/planning/src/: Optimizer.cc  Plan.cc
core/pool/include/: Pool.h
core/python/src/: dashtranscoder.cc
core/tiling/: CMakeLists.txt
core/tiling/include/: AccessDelimiter.h  BitArray.h  BitStream.h  Context.h  Emulation.h  Golombs.h  Headers.h  Nal.h  NalType.h  PictureParameterSet.h  Profile.h  SequenceParameterSet.h  VideoParameterSet.h
core/tiling/src/: AccessDelimiter.cpp  BitArray.cc  BitArrayTests.cc  BitStream.cc  BitStream.cpp  BitStreamTests.cc  Context.cpp  Emulation.cc  EmulationPreventionTests.cpp  GolombEncodeTests.cc  Golombs.cc  Golombs.cpp  Headers.cc  Nal.cc  Nal.cpp  Opaque.cpp  PictureParameterSet.cc  Profile.cpp  SequenceParameterSet.cpp  SliceSegmentLayer.cpp  Stitcher.cc  Stitcher.cpp  VideoParameterSet.cc  main.cc
core/transactions/include/: Transaction.h
core/transactions/src/: Transaction.cc
core/utility/include/: BitArray.h  BitStream.h  Display.h  Ffmpeg.h  FrameRateAlignment.h  Golombs.h  PThreadMutex.h  Rectangle.h  ThreadPool.h  asserts.h  bytestring.h  errors.h  functional.h  lazy.h  number.h  options.h  progress.h  rational.h  reference.h  serialization.h  set.h  spsc_queue.h  tqdm.h
core/utility/src/: BitArray.cc  BitStream.cc  Display.cc  Ffmpeg.cc  Golombs.cc  errors.cc  progress.cc
core/video/include/: Codec.h  Configuration.h  CropTranscoder.h  CudaKernel.h  DecodeReader.h  DecoderLock.h  EncodeAPI.h  EncodeBuffer.h  EncodeWriter.h  Ffmpeg.h  Format.h  Frame.h  FrameQueue.h  GPUContext.h  Gpac.h  JoinVideoEncoder.h  Rectangles.h  Scale.h  TileVideoEncoder.h  Tiler.h  Transcoder.h  UnionTranscoder.h  VideoDecoder.h  VideoDecoderSession.h  VideoEncoder.h  VideoEncoderSession.h  VideoLock.h
core/video/src/: Codec.cc  Configuration.cc  EncodeAPI.cc  EncodeWriter.cc  Ffmpeg.cc  Format.cc  Frame.cc  FrameQueue.cc  GPUContext.cc  Gpac.cc  TileVideoEncoder.cc  Tiler.cc  Transcoder.cc  VideoDecoder.cc  VideoEncoder.cc  VideoEncoderSession.cc  dashtranscoder.cc  dynlink_nvcuvid.cc
plugins/blur/: CMakeLists.txt  udf.cc  udf.h
plugins/blur/tmp/: blur-cfgcmd.txt
plugins/yolo/: CMakeLists.txt  udf.cc  udf.h
python/: .CMakeLists.txt.swp  CMakeLists.txt
python/include/: PythonEnvironment.h  PythonGeometry.h  PythonGreyscale.h  PythonLightField.h  PythonOptimizer.h  PythonOptions.h  PythonTestResources.h  PythonUnary.h  greyscale.h  pyoptions.h
python/plugins/: blur.py  greyscale.py
python/src/: Algebra_ext.cc  Catalog.cc  Dict2Map.hh  Module.cc  PythonGreyscale.cc  PythonLightField.cc  PythonUnary.cc  dashtranscoder.cc  greyscale.cc  options.cc  pymain.cc
python/test/: test.py
test/: CMakeLists.txt  gtest.cmake
test/include/utility/: AssertTime.h  AssertUtility.h  AssertVideo.h  RequiresGPUTest.h  TestResources.h
test/resources/: assert-frames.sh  assert-psnr.sh  assert-quality.sh  assert-resolution.sh  assert-rgb.py  ffmpeg-generate-video.sh  test-pattern.h264
test/resources/red10/: stream0.h264
test/resources/tiles/: tile-0.hevc  tile-1.hevc  tile-10.hevc  tile-11.hevc  tile-12.hevc  tile-13.hevc  tile-14.hevc  tile-15.hevc  tile-2.hevc  tile-3.hevc  tile-4.hevc  tile-5.hevc  tile-6.hevc  tile-7.hevc  tile-8.hevc  tile-9.hevc
test/src/benchmarks/: DegenerateSelectionBenchmarkTests.cc  DepthmapBenchmarkTests.cc  FfmpegBenchmarkTests.cc  Figure13b.cc  Figure14c.cc  LightFieldBenchmarkTests.cc  MapBenchmarkTests.cc  OverlayBenchmarkTests.cc  PanoramicTilingBenchmarkTests.cc  PartitionBenchmarkTests.cc  (+11 more)
(+138 files in other folders)
